# cpp_cmake_template

./: CMakeLists.txt  README.md
lib/my_project/: CMakeLists.txt
my_project/: CMakeLists.txt
my_project/src/: main.cxx
test/: CMakeLists.txt  test_my_project.cxx
